--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,13 @@ install:
 - cd eg_01_java_8
 - ./build_and_run.sh
 - echo "------------------ eg_02_java_9_simple"
-- cd ../eg_02_java_9_simple"
+- cd ../eg_02_java_9_simple
+- ./build_and_run.sh
+- echo "------------------ eg_03_1_open_fail"
+- cd ../eg_03_1_open_fail
+- ./build_and_run.sh
+- echo "------------------ eg_03_2_open_module"
+- cd ../eg_03_2_open_module
 - ./build_and_run.sh
 
 - cd ..
